--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,6 +87,7 @@
 	<a href="https://www.instagram.com/theplc/"><img src="/res/insta.svg" alt="Instagram"></a>
 	<a href="https://www.last.fm/user/shelloflight/"><img src="/res/lastfm.svg" alt="Last.fm"></a>
 	<a href="https://www.linkedin.com/in/nickuhlig/"><img src="/res/linkedin.svg" alt="LinkedIn"></a>
+	<a href="https://soundcloud.com/the-plc/"><img src="/res/soundcloud.svg" alt="SoundCloud"></a>
 	<a href="https://twitter.com/plcthe"><img src="/res/twitter.svg" alt="Twitter"></a>
       </p>
     </footer>
