--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,12 @@ layout: default
     <h2>{{ page.title }}</h2>
     <info datetime="{{ page.date | date: "%Y-%m-%d" }}">
       {{ page.date | date: "%b %e, %Y" }}
+      <span>[
+        {% for tag in page.tags %}
+          {% capture tag_name %}{{ tag }}{% endcapture %}
+          <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+        {% endfor %}
+      ]</span>
     </info>
     {% endunless %}
     <div class="body">{% if page.external_url %}Article is published at {{ page.external_url }}<script>
