--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,9 +85,10 @@
     <footer>
       <p>
 	<a href="https://www.facebook.com/gilhukcin"><img src="/res/facebook.svg" alt="Facebook"></a>
-		<a href="https://www.instagram.com/theplc/"><img src="/res/insta.svg" alt="Instagram"></a>
+	<a href="https://www.instagram.com/theplc/"><img src="/res/insta.svg" alt="Instagram"></a>
 	<a href="https://www.linkedin.com/in/nickuhlig/"><img src="/res/linkedin.svg" alt="LinkedIn"></a>
-		<a href="https://soundcloud.com/the-plc/"><img src="/res/soundcloud.svg" alt="SoundCloud"></a>
+	<a href="https://scholar.google.com/citations?user=IbtYnaIAAAAJ&hl=en"><img src="/res/googlescholar.svg" alt="Google Scholar"></a>
+	<a href="https://soundcloud.com/the-plc/"><img src="/res/soundcloud.svg" alt="SoundCloud"></a>
 	<a href="https://www.last.fm/user/shelloflight/"><img src="/res/lastfm.svg" alt="Last.fm"></a>
 	<a href="https://github.com/nickuhlig/"><img src="/res/github.svg" alt="Github"></a>
       </p>
